--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -118,6 +118,10 @@ code {
   }
 }
 
+input[type=checkbox]:enabled {
+  cursor: pointer;
+}
+
 html {
   position: relative;
   height: 100%;
@@ -240,6 +244,62 @@ a {
     }
   }
 }
+
+.tab-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  border: 1px solid #fff;
+  border-collapse: collapse;
+  font-size: 14px;
+  
+  .row {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #fff;
+    
+    &:nth-child(even) {
+      background-color: #fbfbff;
+    }
+    
+    &:nth-child(odd) {
+      background-color: #f8f8ff;
+    }
+
+    .cell {
+      flex: 1;
+      padding: 5px 10px;
+      border-right: 1px solid #fff;
+      }
+    
+      & .slim {
+        flex: 0;
+        flex-basis: 30px;
+        text-align: center;
+      }
+
+      & .slim2 {
+        flex: 0;
+        flex-basis: 40px;
+        text-align: center;
+      }
+
+      :last-child {
+        border-right: none;
+      }
+
+      input[type=checkbox] {
+        padding: 5px;
+      }
+  }
+  .header {
+    font-weight: bold;
+    background-color: rgb(245, 247, 255);
+  }
+}
+
+
+
 
 .swiper {
   width: 100%;
@@ -390,7 +450,7 @@ html.burger-menu-opened {
   overflow: hidden;
 
   .burger-menu-container {
-    left: 0px;
+    top: 44px;
   }
 
   .float-burger-line {
@@ -478,8 +538,8 @@ a {
 .burger-menu-container {
   display: absolute;
   position: fixed;
-  top: 44px;
-  left: 100vw;
+  top: -100vh;
+  left: 0;
   width: 100vw;
   max-width: 100vw;
   min-height: calc(100vh - 44px);
@@ -1186,8 +1246,8 @@ html {
   }
 
   .main-content {
-    padding: 17px;
-    padding-top: 10px;
+    padding: 25px;
+    padding-top: 15px;
   }
 
   .footer-content {
@@ -1241,7 +1301,7 @@ html {
     font-size: 18px;
 
     .main-content {
-      padding: 20px 40px;
+      padding: 25px 20px;
 
       img {
         border-radius: 8px;
@@ -1256,7 +1316,7 @@ html {
     font-size: 17px;
 
     .main-content {
-      padding: 20px 35px;
+      padding: 25px 20px;
 
       img {
         border-radius: 7px;
@@ -1272,7 +1332,7 @@ html {
     font-size: 17px;
 
     .main-content {
-      padding: 10px 30px;
+      padding: 25px 20px;
 
       img {
         border-radius: 6px;
@@ -1301,7 +1361,7 @@ html {
     font-size: 16px;
 
     .main-content {
-      padding: 10px 20px;
+      padding: 25px 20px;
 
       img {
         border-radius: 5px;
@@ -1400,7 +1460,7 @@ html {
 
 @media screen and (min-width: 1200px) {
   .main-content {
-    padding: 20px 45px;
+    padding: 25px 20px;
   }
 
   img {
