--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -264,8 +264,51 @@ select {
   background-color: rgba(40, 60, 90, .07);
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &.assigned {
     background-color: rgba(40, 60, 90, .13);
+  }
+}
+
+.toastBox {
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+}
+
+.toast {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 70px;
+  width: 400px;
+  background: #fff;
+  margin: 15px 0;
+  font-weight: 500;
+  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  transform: translateX(100%);
+  animation: moveleft 0.3s linear forwards;
+  &::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation: consum 5s linear forwards;
+  }
+}
+
+@keyframes consum {
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes moveleft {
+  100% {
+    transform: translateX(0);
   }
 }
 
@@ -358,7 +401,8 @@ select {
         background-color: rgba(170, 170, 30, .2);
         cursor: pointer;
 
-        &:hover {
+        &:hover,
+        &.assigned {
           background-color: rgba(40, 60, 90, .13);
         }
       }
