--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -272,18 +272,18 @@ select {
 
 .toastBox {
   position: absolute;
-  right: 50px;
-  bottom: 50px;
+  right: 40px;
+  bottom: 80px;
 }
 
 .toast {
   display: flex;
   align-items: center;
   position: relative;
-  height: 70px;
   width: 400px;
   background: #fff;
-  margin: 15px 0;
+  margin: 10px 0;
+  padding: 20px 15px;
   font-weight: 500;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
   transform: translateX(100%);
@@ -294,7 +294,7 @@ select {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 5px;
+    height: 4px;
     background: green;
     animation: consum 5s linear forwards;
   }
