--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -270,20 +270,20 @@ select {
   }
 }
 
-.toastBox {
+.notificationBox {
   position: absolute;
   right: 40px;
   bottom: 80px;
 }
 
-.toast {
+.notification {
   display: flex;
   align-items: center;
   position: relative;
   width: 400px;
   background: #fff;
   margin: 10px 0;
-  padding: 20px 15px;
+  padding: 20px 20px;
   font-weight: 500;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
   transform: translateX(100%);
@@ -297,6 +297,11 @@ select {
     height: 4px;
     background: green;
     animation: consum 5s linear forwards;
+  }
+  &.error {
+    &::after{
+      background: rgb(236, 87, 0);
+    }
   }
 }
 
