--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -278,11 +278,12 @@ select {
 
 .notification {
   display: flex;
+  cursor: pointer;
   align-items: center;
   position: relative;
   width: 400px;
   background: #fff;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   padding: 20px 20px;
   font-weight: 500;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -295,12 +296,23 @@ select {
     bottom: 0;
     width: 100%;
     height: 4px;
-    background: green;
-    animation: consum 5s linear forwards;
+    background: rgb(11, 175, 11);
+    animation: consum 4s linear forwards;
+    animation-play-state: running;
   }
   &.error {
     &::after{
       background: rgb(236, 87, 0);
+    }
+  }
+}
+
+.notificationBox {
+  &.stopped {
+    .notification {
+      &::after {
+        animation-play-state: paused;
+      }
     }
   }
 }
