--- a/front-pcs/src/style/styles.scss
+++ b/front-pcs/src/style/styles.scss
@@ -274,6 +274,7 @@ select {
   position: absolute;
   right: 40px;
   bottom: 80px;
+  // top: 70px;
 }
 
 .notification {
@@ -306,10 +307,22 @@ select {
     animation: consum 5s linear forwards;
     animation-play-state: running;
   }
+
+  > .notification-icon {
+    color: rgb(11, 175, 11);
+  }
+
   &.error {
+    > .notification-icon {
+      color: rgb(236, 87, 0);
+    }
+
     &::after{
       background: rgb(236, 87, 0);
     }
+  }
+  .notification-content {
+    padding-left: 12px;
   }
 }
 
